# Competteive-cpp

./: .gitignore  CMakeLists.txt  CustomFunctions.cpp  GoodSubarraya.h  README.md  generate.cpp  input.txt  output-DESKTOP-TJUJ2TJ-2.txt  output-DESKTOP-TJUJ2TJ-3.txt  output-DESKTOP-TJUJ2TJ-4.txt  output-DESKTOP-TJUJ2TJ.txt  output-ShivamsHP-2.txt  output-ShivamsHP-3.txt  output-ShivamsHP-4.txt  output.txt  practice.cpp  template.cpp
CodeChef/: ACCBIP.cpp  ADAMAT.cpp  ALIENN.cpp  ARRGAME.cpp  CDQU5.cpp  CENS20A.cpp  CENS20D.cpp  CENS20G.cpp  CHEFCOMP.cpp  FINDXOR.cpp  FROGV.cpp  GCDDOPS.cpp  KPRIME.cpp  MODEFREQ.cpp  POLYREL.cpp  RBTREES.cpp  ROOTTTREE.cpp  SUBINC.cpp  SUBSFREQ.cpp  UKROBOT.cpp  WATMELON.cpp
CodeForces/: DistanceandAxis.cpp  GRAkforcesA.cpp  GraknForcesD.cpp  GrankForcesB.cpp  GrankForcesC.cpp  MereArray.cpp  OmkarAndPAss.cpp  RPGProtogonist.cpp  TernarySequence.cpp  educational95B.cpp  hihih.cpp  number646B.cpp  number670B.cpp  number673A.cpp  number673B.cpp  number673C.cpp
CodeForces/Raif_1/: A.cpp  B.cpp  C.cpp  D.cpp
CodeForces/_PreviousComp/: BinaryStirgnRepres.cpp  JugglingLetters.cpp  OmkarAndBedWars.cpp  OmkarAndInfinityClcok.cpp  OmkarAndWaterSlide.cpp
CodeForces/educational95/: educational95A.cpp  educational95C.cpp
CodeForces/educational97/: A.cpp  B.cpp  C.cpp  D.cpp
CodeForces/educational98/: A.cpp  B.cpp  (+3 more)
GoogleKickStart/: GoogleKickstartTemplate.cpp  RoundAAllocation.cpp  RoundAlPlates.cpp  RoundEHighBuildings.cpp
Kattis/: GoodMorning.cpp  GrandpaBernie.cpp  TrainSorting.cpp  ants.cpp  paints.cpp
Misc/: hr.cpp  temp.cpp
(+20 files in other folders)
