cmake_minimum_required(VERSION 3.17)
project(CLion)

set(CMAKE_CXX_STANDARD 17)

add_executable(currA CodeForces/educational98/A.cpp)
add_executable(currB CodeForces/educational98/B.cpp)
add_executable(currC CodeForces/educational98/C.cpp)
add_executable(currD CodeForces/educational98/D.cpp)
add_executable(currE CodeForces/educational97/E.cpp)


