cmake_minimum_required(VERSION 3.17)
project(CLion)

set(CMAKE_CXX_STANDARD 17)

add_executable(currA CodeForces/number685/A.cpp)
add_executable(currB CodeForces/number685/B.cpp)
add_executable(currC CodeForces/number685/C.cpp)
add_executable(currD CodeForces/number685/D.cpp)
add_executable(currE CodeForces/number685/E.cpp)


